# llama-tool-parser-native

./: .gitignore  Cargo.toml  benchmark.csv  pyproject.toml  readme.md
.github/workflows/: build.yaml
backend/: Cargo.toml
backend/src/: lib.rs  logos_parser.rs  nom_parser.rs
backend/tests/: test_nom_parser.rs  test_tool_parsers.rs
llama_tool_parser_native/: __init__.py  pythonic_parser.py
python-bindings/: Cargo.toml  pyproject.toml  pythonic_parser.py
python-bindings/llama_tool_parser_native/: __init__.py  pythonic_parser.py
python-bindings/src/: lib.rs
python-bindings/tests/: test_additional_cases.py  test_comma_list.py  test_json_extraction.py  test_parse.py  test_streaming.py
python-bindings/tests/test_pythonic_parser/: test_pythonic_parser.py
src/: lib.rs
testing/: Cargo.toml
testing/src/: main.rs
tests/: test_additional_cases.py  test_parse.py
tests/test_pythonic_parser/: test_pythonic_parser.py
