[package]
name = "llama-tool-parser-native"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "llama_tool_parser_native"
path = "src/lib.rs"


[dependencies]
logos = { version = "0.15.0", features = ["debug"] }
pyo3 = {version = "0.24.1", features = ["extension-module", "abi3"]}
pythonize = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
