[workspace]
members = [
    "backend",
    "python-bindings",
    "testing",
]
resolver = "3"

[workspace.package]
version = "0.0.3"
edition = "2024"

[workspace.dependencies]
logos = { version = "0.15.0", features = ["debug"] }
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3"] }
pythonize = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
